--- a/index.html
+++ b/index.html
@@ -1,1 +1,272 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PC17STATIC | Servicio Técnico Profesional</title>
+
+    <style>
+        /* ===== BASE ===== */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            color: #ffffff;
+            min-height: 100vh;
+        }
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        /* ===== HEADER ===== */
+        header {
+            padding: 25px;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(6px);
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            color: #00eaff;
+            letter-spacing: 2px;
+        }
+
+        header p {
+            margin-top: 10px;
+            font-size: 1.1rem;
+            opacity: 0.9;
+        }
+
+        /* ===== HERO ===== */
+        .hero {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+            padding: 60px 8%;
+            gap: 30px;
+        }
+
+        .hero-text {
+            max-width: 520px;
+        }
+
+        .hero-text h2 {
+            font-size: 2.2rem;
+            margin-bottom: 15px;
+        }
+
+        .hero-text p {
+            line-height: 1.6;
+            opacity: 0.95;
+        }
+
+        .hero-img {
+            max-width: 420px;
+        }
+
+        .hero-img img {
+            width: 100%;
+            border-radius: 18px;
+            box-shadow: 0 0 25px rgba(0, 234, 255, 0.4);
+        }
+
+        /* ===== SECTIONS ===== */
+        section {
+            padding: 60px 8%;
+        }
+
+        section h2 {
+            text-align: center;
+            margin-bottom: 35px;
+            font-size: 2rem;
+            color: #00eaff;
+        }
+
+        /* ===== SERVICES ===== */
+        .services {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 25px;
+        }
+
+        .card {
+            background: rgba(255,255,255,0.05);
+            border-radius: 16px;
+            padding: 25px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.4);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 0 25px rgba(0, 234, 255, 0.4);
+        }
+
+        .card h3 {
+            margin-bottom: 12px;
+            color: #00eaff;
+        }
+
+        .card p {
+            font-size: 0.95rem;
+            line-height: 1.5;
+        }
+
+        /* ===== PRICES ===== */
+        .prices {
+            max-width: 800px;
+            margin: auto;
+            display: grid;
+            gap: 20px;
+        }
+
+        .price-box {
+            background: rgba(0,0,0,0.45);
+            padding: 22px;
+            border-radius: 14px;
+            border-left: 4px solid #00eaff;
+        }
+
+        .price-box h3 {
+            margin-bottom: 8px;
+        }
+
+        /* ===== QUOTATION ===== */
+        .quote {
+            max-width: 800px;
+            margin: auto;
+            background: rgba(255,255,255,0.05);
+            padding: 30px;
+            border-radius: 18px;
+            line-height: 1.7;
+        }
+
+        /* ===== FOOTER ===== */
+        footer {
+            text-align: center;
+            padding: 30px;
+            background: rgba(0,0,0,0.6);
+            margin-top: 60px;
+            font-size: 0.9rem;
+        }
+
+        footer a {
+            color: #00eaff;
+        }
+
+        /* ===== RESPONSIVE ===== */
+        @media (max-width: 768px) {
+            .hero {
+                flex-direction: column;
+                text-align: center;
+            }
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- HEADER -->
+    <header>
+        <h1>PC17STATIC</h1>
+        <p>Servicio Técnico Profesional en Computadoras</p>
+    </header>
+
+    <!-- HERO -->
+    <div class="hero">
+        <div class="hero-text">
+            <h2>Técnico en computadoras</h2>
+            <p>
+                Ofrezco servicio técnico profesional con enfoque en el trabajo honesto,
+                soluciones claras y atención responsable. Cada equipo es tratado con
+                cuidado, transparencia y compromiso total.
+            </p>
+        </div>
+
+        <div class="hero-img">
+            <!-- Imagen decorativa tipo Goku técnico -->
+            <img src="https://i.imgur.com/8zQZQZQ.png" alt="Goku Técnico Decorativo">
+        </div>
+    </div>
+
+    <!-- SERVICES -->
+    <section>
+        <h2>Servicios</h2>
+        <div class="services">
+            <div class="card">
+                <h3>Mantenimiento</h3>
+                <p>Limpieza física, cambio de pasta térmica y optimización del sistema.</p>
+            </div>
+            <div class="card">
+                <h3>Instalación de Software</h3>
+                <p>Windows, drivers, programas esenciales y configuraciones básicas.</p>
+            </div>
+            <div class="card">
+                <h3>Diagnóstico</h3>
+                <p>Revisión completa para detectar fallas de hardware o software.</p>
+            </div>
+            <div class="card">
+                <h3>Optimización</h3>
+                <p>Mejora de rendimiento para juegos, trabajo o estudio.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- PRICES -->
+    <section>
+        <h2>Precios</h2>
+        <div class="prices">
+            <div class="price-box">
+                <h3>Diagnóstico</h3>
+                <p>₡5.000 – ₡10.000 (dependiendo del equipo)</p>
+            </div>
+            <div class="price-box">
+                <h3>Mantenimiento general</h3>
+                <p>₡15.000 – ₡25.000</p>
+            </div>
+            <div class="price-box">
+                <h3>Instalación de Windows</h3>
+                <p>₡15.000 + licencia (si el cliente no la posee)</p>
+            </div>
+            <div class="price-box">
+                <h3>Optimización</h3>
+                <p>₡10.000 – ₡20.000</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- QUOTATION -->
+    <section>
+        <h2>Cotización</h2>
+        <div class="quote">
+            <p>
+                La cotización se realiza después de un diagnóstico del equipo.
+                Se evalúa el estado del hardware y software para ofrecer una solución clara.
+                El precio final depende del trabajo requerido y siempre se informa al cliente
+                antes de realizar cualquier reparación.
+            </p>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>
+            Contacto por WhatsApp:
+            <a href="https://wa.me/50600000000" target="_blank">Enviar mensaje</a>
+        </p>
+        <p>© 2025 PC17STATIC - Trabajo honesto y profesional</p>
+    </footer>
+
+</body>
+</html>
 
